@@ -1,5 +1,9 @@
 2003-02-21  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
+	* library/comdlg.tcl (FDGetFileTypes): Set an upper limit on how
+	long a file type item description string can get due to appending
+	of types. [Bug #617392]
+
 	* tests/panedwindow.test (panedwindow-30.1): 
 	* generic/tkPanedWindow.c (DisplayPanedWindow, DisplayProxyWindow): 
 	Use the window's depth, not the screen's default depth. [Bug #671122]
